Fix alignment of .navbar-brand

--- a/docs/assets/css/todc-bootstrap.css
+++ b/docs/assets/css/todc-bootstrap.css
@@ -2188,7 +2188,7 @@ fieldset[disabled] .btn-link:focus {
     float: left;
     padding-top: 4px;
     padding-bottom: 4px;
-    margin-left: -15px;
+    margin-left: -10px;
   }
   .navbar .nav {
     float: left;
@@ -2239,7 +2239,7 @@ fieldset[disabled] .btn-link:focus {
     float: left;
     padding-top: 12px;
     padding-bottom: 12px;
-    margin-left: -15px;
+    margin-left: -10px;
   }
   .navbar-masthead .nav {
     float: left;
@@ -2291,7 +2291,7 @@ fieldset[disabled] .btn-link:focus {
     float: left;
     padding-top: 8px;
     padding-bottom: 8px;
-    margin-left: -15px;
+    margin-left: -10px;
   }
   .navbar-main .nav {
     float: left;
