--- a/less/navbar.less
+++ b/less/navbar.less
@@ -825,7 +825,7 @@
     float: left;
     padding-top: (@navbar-height - @line-height-base) / 2;
     padding-bottom: (@navbar-height - @line-height-base) / 2;
-    margin-left: -15px;
+    margin-left: -10px;
   }
   .navbar .nav {
     float: left;
@@ -877,7 +877,7 @@
     float: left;
     padding-top: (@navbar-masthead-height - @line-height-base) / 2;
     padding-bottom: (@navbar-masthead-height - @line-height-base) / 2;
-    margin-left: -15px;
+    margin-left: -10px;
   }
   .navbar-masthead .nav {
     float: left;
@@ -934,7 +934,7 @@
     float: left;
     padding-top: (@navbar-main-height - @line-height-base) / 2;
     padding-bottom: (@navbar-main-height - @line-height-base) / 2;
-    margin-left: -15px;
+    margin-left: -10px;
   }
   .navbar-main .nav {
     float: left;
